<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/home"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/home_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/app_name"
        android:textColor="#ffffff"
        android:textSize="@dimen/Size20" />

    <ImageView
        android:id="@+id/home_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/home_title"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/recyclefinder_logo"
        android:src="@drawable/logo" />

    <Button
        android:id="@+id/home_use_my_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/home_title"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/green_button"
        android:text="@string/use_my_location"
        android:textColor="@drawable/button_text_color" />

    <EditText
        android:id="@+id/home_enter_location"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/home_use_my_location"
        android:layout_below="@+id/home_use_my_location"
        android:layout_marginTop="60dp"
        android:ems="10"
        android:hint="@string/enter_location" />

    <Button
        android:id="@+id/home_search"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/home_enter_location"
        android:layout_alignBottom="@+id/home_enter_location"
        android:layout_alignRight="@+id/home_use_my_location"
        android:background="@drawable/green_button"
        android:text="@string/search"
        android:textColor="@drawable/button_text_color" />

    <TextView
        android:id="@+id/home_or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/home_use_my_location"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:text="@string/or"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/home_help"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/home_logo"
        android:layout_alignRight="@+id/home_use_my_location"
        android:layout_marginBottom="16dp"
        android:background="@drawable/green_button"
        android:text="@string/question_mark"
        android:textColor="@drawable/button_text_color" />

</RelativeLayout>